--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,7 +16,7 @@
             <p:panel header="Inicio de sesión" style="width:300px;margin: 150px auto">
                 <h:panelGrid columns="1" cellpadding="5">
                     <h:outputText value="Nombre usuario"/>
-                    <p:inputText id="user" value="#{userController.user.username}"/>
+                    <p:inputText id="user" value="#{userController.user.userName}"/>
                     <h:outputText value="Contraseña"/>
                     <p:password id="password" value="#{userController.user.password}"/>
                 </h:panelGrid>
