--- a/src/main/webapp/usuario/list-usuario.xhtml
+++ b/src/main/webapp/usuario/list-usuario.xhtml
@@ -37,7 +37,7 @@
             <p:column headerText="Acciones">
                 <p:commandButton value="Eliminar"
                                  action="#{userController.deleteUser(usuarioT.userName)}"
-                                 update="empresasTable"
+                                 update="usuariosTable"
                                  oncomplete="PF('dlg').hide();"
                                  icon="pi pi-trash"
                                  onclick="return confirm('¿Estás seguro de que deseas eliminar este usuario?');" />
@@ -49,7 +49,7 @@
             <h:outputText value="¿Estás seguro de que deseas eliminar este usuario?" />
             <p:commandButton value="Sí"
                              action="#{userController.deleteUser(usuarioT.userName)}"
-                             update="empresasTable"
+                             update="usuariosTable"
                              oncomplete="PF('dlg').hide();" />
             <p:commandButton value="No" onclick="PF('dlg').hide();" type="button" />
         </p:dialog>
