--- a/src/main/webapp/usuario/add-usuario.xhtml
+++ b/src/main/webapp/usuario/add-usuario.xhtml
@@ -1,4 +1,4 @@
-<!-- saveEmpresa.xhtml -->
+<!-- saveUsuario.xhtml -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
@@ -24,13 +24,13 @@
             <h:outputLabel for="admin" value="Privilegios:" />
             <p:selectOneMenu id="admin" value="#{userController.user.admin}" required="true">
                 <f:selectItem itemLabel="Seleccione tipo" itemValue="" noSelectionOption="true" />
-                <f:selectItem itemLabel="Administrador" itemValue= "true"  />
-                <f:selectItem itemLabel="Cliente" itemValue="false" />
+                <f:selectItem itemLabel="Administrador" itemValue= "1"  />
+                <f:selectItem itemLabel="Cliente" itemValue="0" />
             </p:selectOneMenu>
 
         </h:panelGrid>
         <p:commandButton value="Volver" immediate="true" action="/home?faces-redirect=true" icon="pi pi-arrow-left"/>
-        <p:commandButton value="Guardar Empresa" action="#{empresaController.saveEmpresa()}" update="@form" icon="pi pi-save"/>
+        <p:commandButton value="Guardar Usuario" action="#{userController.saveUser()}" update="@form" icon="pi pi-save"/>
 
     </h:form>
 </h:body>
