--- a/src/main/webapp/camion/list-camion.xhtml
+++ b/src/main/webapp/camion/list-camion.xhtml
@@ -56,7 +56,7 @@
                     </p:submenu>
 
                     <f:facet name="options">
-                        <p:commandLink value="#{userLogged.username}" action="#{userController.logout()}"/>
+                        <p:commandLink value="#{userLogged.userName}" action="#{userController.logout()}"/>
                     </f:facet>
                 </p:menubar>
             </h:form>
