--- a/src/main/webapp/empresa/update-empresa.xhtml
+++ b/src/main/webapp/empresa/update-empresa.xhtml
@@ -57,7 +57,7 @@
                         </p:submenu>
 
                         <f:facet name="options">
-                            <p:commandLink value="#{userLogged.username}" action="#{userController.logout()}"/>
+                            <p:commandLink value="#{userLogged.userName}" action="#{userController.logout()}"/>
                         </f:facet>
                     </p:menubar>
                 </h:form>
