--- a/src/main/webapp/usuario/add-usuario.xhtml
+++ b/src/main/webapp/usuario/add-usuario.xhtml
@@ -22,10 +22,10 @@
             <p:inputText id="password" value="#{userController.user.password}" required="true" />
 
             <h:outputLabel for="admin" value="Privilegios:" />
-            <p:selectOneMenu id="admin" value="#{userController.user.admin}" required="true">
+            <p:selectOneMenu id="admin" value="#{userController.user.admin}">
                 <f:selectItem itemLabel="Seleccione tipo" itemValue="" noSelectionOption="true" />
-                <f:selectItem itemLabel="Administrador" itemValue= "1"  />
-                <f:selectItem itemLabel="Cliente" itemValue="0" />
+                <f:selectItem itemLabel="Administrador" itemValue= "true"  />
+                <f:selectItem itemLabel="Cliente" itemValue="false" />
             </p:selectOneMenu>
 
         </h:panelGrid>
