--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -35,7 +35,7 @@
                                 <p:menuitem value="Nueva" action="/remesa/add-remesa?faces-redirect=true"/>
                             </p:submenu>
                             <p:submenu label="Agentes" rendered="#{userLogged.admin}">
-                                <p:menuitem value="Listar" action="/agente/list-agentes?faces-redirect=true"/>
+                                <p:menuitem value="Listar" action="/agente/list-agente?faces-redirect=true"/>
                                 <p:menuitem value="Nuevo" action="/agente/add-agente?faces-redirect=true"/>
                             </p:submenu>
                             <p:submenu label="Camiones" rendered="#{userLogged.admin}">
