--- a/src/main/webapp/camion/update-camion.xhtml
+++ b/src/main/webapp/camion/update-camion.xhtml
@@ -34,7 +34,7 @@
                         <p:menuitem value="Nueva" action="/remesa/add-remesa?faces-redirect=true"/>
                     </p:submenu>
                     <p:submenu label="Agentes" rendered="#{userLogged.admin}">
-                        <p:menuitem value="Listar" action="/agente/list-agentes?faces-redirect=true"/>
+                        <p:menuitem value="Listar" action="/agente/list-agente?faces-redirect=true"/>
                         <p:menuitem value="Nuevo" action="/agente/add-agente?faces-redirect=true"/>
                     </p:submenu>
                     <p:submenu label="Camiones" rendered="#{userLogged.admin}">
@@ -56,7 +56,7 @@
                     </p:submenu>
 
                     <f:facet name="options">
-                        <p:commandLink value="#{userLogged.username}" action="#{userController.logout()}"/>
+                        <p:commandLink value="#{userLogged.userName}" action="#{userController.logout()}"/>
                     </f:facet>
                 </p:menubar>
             </h:form>
