Camionxhtml2 y edicion de my_pers....

--- a/src/main/webapp/remesa/list-remesa.xhtml
+++ b/src/main/webapp/remesa/list-remesa.xhtml
@@ -49,6 +49,13 @@
                 <h:outputText value="#{remesaT.user}" />
             </p:column>
 
+            <p:column headerText="Agregar Agentes">
+                <p:commandButton value="AgregarAgentes"
+                                 action="#{remesaController.setAgentes(remesa.agente)}"
+                                 icon="pi pi-user-edit"/>
+            </p:column>
+
+
             <p:column headerText="Acciones">
                 <p:commandButton value="Eliminar"
                                  action="#{remesaController.deleteRemesa(remesaT.id)}"
