--- a/src/main/webapp/remesa/add-remesa.xhtml
+++ b/src/main/webapp/remesa/add-remesa.xhtml
@@ -1,4 +1,3 @@
-<!-- saveCamion.xhtml -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
@@ -15,7 +14,7 @@
 
         <h:panelGrid columns="2" cellpadding="5">
 
-            <h:outputLabel for="id" value="Placa:" />
+            <h:outputLabel for="id" value="Identificacion:" />
             <p:inputText id="id" value="#{remesaController.remesa.id}" required="true" />
 
             <h:outputLabel for="date" value="Fecha:" />
@@ -25,22 +24,36 @@
             <p:inputText id="time" value="#{remesaController.remesa.time}" required="true" />
 
             <h:outputLabel for="status" value="Estado:" />
-            <p:inputText id="status" value="#{remesaController.remesa.status}" required="true" />
+            <p:selectOneMenu id="status" value="#{remesaController.remesa.status}" required="true">
+                <f:selectItem itemLabel="Seleccione tipo" itemValue="" noSelectionOption="true" />
+                <f:selectItem itemLabel="Solicitada" itemValue="Solicitada" />
+                <f:selectItem itemLabel="Autorizada" itemValue="Autorizada" />
+            </p:selectOneMenu>
+
+            <h:outputLabel for="agente" value="Agente:" />
+            <p:selectOneMenu id="agente" value="#{remesaController.remesa.agente.id}" required="true">
+                <c:forEach var="agenteS" items="#{remesaController.agentes}">
+                    <f:selectItem itemLabel="#{agenteS.id}" itemValue="#{agenteS.id}" />
+                </c:forEach>
+            </p:selectOneMenu>
 
             <h:outputLabel for="camion" value="Camion:" />
-            <p:selectOneMenu id="camion" value="#{remesaController.remesa.camion}" required="true">
-            <f:selectItem itemLabel="Select a Camion" itemValue="" /> <!-- Default empty option -->
+            <p:selectOneMenu id="camion" value="#{remesaController.remesa.camion.licensePlate}" required="true">
             <c:forEach var="camionS" items="#{remesaController.camiones}">
-                <f:selectItem itemLabel="#{camionS.licensePlate}" itemValue="#{camionS}" />
+                <f:selectItem itemLabel="#{camionS.licensePlate}" itemValue="#{camionS.licensePlate}" />
             </c:forEach>
             </p:selectOneMenu>
 
-
-
+            <h:outputLabel for="empresa" value="Empresa:" />
+            <p:selectOneMenu id="empresa" value="#{remesaController.remesa.empresa.companyName}" required="true">
+                <c:forEach var="empresaS" items="#{remesaController.empresas}">
+                    <f:selectItem itemLabel="#{empresaS.companyName}" itemValue="#{empresaS.companyName}" />
+                </c:forEach>
+            </p:selectOneMenu>
 
         </h:panelGrid>
         <p:commandButton value="Volver" immediate="true" action="/home?faces-redirect=true" icon="pi pi-arrow-left"/>
-        <p:commandButton value="Guardar Camión" action="#{remesaController.saveRemesa()}" update="@form" icon="pi pi-save"/>
+        <p:commandButton value="Guardar Remesa" action="#{remesaController.saveRemesa()}" update="@form" icon="pi pi-save"/>
 
     </h:form>
 </h:body>
