--- a/src/main/webapp/camion/list-camion.xhtml
+++ b/src/main/webapp/camion/list-camion.xhtml
@@ -46,8 +46,8 @@
                         <p:menuitem value="Nueva" action="/empresa/add-empresa?faces-redirect=true"/>
                     </p:submenu>
                     <p:submenu label="Usuarios" rendered="#{userLogged.admin}"> <!--NO TE OLVIDES-->
-                        <p:menuitem value="Listar" action="/empresa/list-empresa?faces-redirect=true"/>
-                        <p:menuitem value="Nueva" action="/empresa/add-empresa?faces-redirect=true"/>
+                        <p:menuitem value="Listar" action="/empresa/list-usuario?faces-redirect=true"/>
+                        <p:menuitem value="Nueva" action="/empresa/add-usuario?faces-redirect=true"/>
                     </p:submenu>
                     <p:submenu label="Informes" rendered="#{userLogged.admin}">
                         <p:menuitem value="Remesas por Agente" action="/reports/remesas-by-agente?faces-redirect=true"/>
