--- a/src/main/webapp/empresa/update-empresa.xhtml
+++ b/src/main/webapp/empresa/update-empresa.xhtml
@@ -47,8 +47,8 @@
                             <p:menuitem value="Nueva" action="/empresa/add-empresa?faces-redirect=true"/>
                         </p:submenu>
                         <p:submenu label="Usuarios" rendered="#{userLogged.admin}"> <!--NO TE OLVIDES-->
-                            <p:menuitem value="Listar" action="/empresa/list-empresa?faces-redirect=true"/>
-                            <p:menuitem value="Nueva" action="/empresa/add-empresa?faces-redirect=true"/>
+                            <p:menuitem value="Listar" action="/empresa/list-usuario?faces-redirect=true"/>
+                            <p:menuitem value="Nueva" action="/empresa/add-usuario?faces-redirect=true"/>
                         </p:submenu>
                         <p:submenu label="Informes" rendered="#{userLogged.admin}">
                             <p:menuitem value="Remesas por Agente" action="/reports/remesas-by-agente?faces-redirect=true"/>
@@ -65,13 +65,13 @@
         </div>
     <div id="contentPage"> <!--Inicia el contenido-->
     <h:form>
-        <h1>Editar Camión</h1>
+        <h1>Editar Empresa</h1>
 
         <p:messages autoUpdate="true" />
 
         <h:panelGrid columns="2" cellpadding="5">
 
-            <h:outputText for="companyName" value="Placa:" />
+            <h:outputText for="companyName" value="Nombre:" />
             <h:outputText id="companyName" value="#{empresaController.empresa.companyName}"/>
 
             <h:outputLabel for="address" value="Direccion:" />
