--- a/src/main/webapp/agente/update-agente.xhtml
+++ b/src/main/webapp/agente/update-agente.xhtml
@@ -98,7 +98,7 @@
     </div> <!--fin del contenido-->
         <div id="footerPage">
             <hr/>
-            <p>&copy;2024 Remmitance Trucks CR. Todos los derechos reservados</p><p:commandLink value="Sobre Nosotros" action="aboutUs?faces-redirect=true"/>
+            <p>&copy;2024 Remmitance Trucks CR. Todos los derechos reservados</p> <p:commandLink value="Sobre Nosotros" action="/aboutUs/aboutUs?faces-redirect=true"/>
         </div>
     </div>
 </h:body>
