--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -18,7 +18,7 @@
                     <p:panelGrid id="header" style="width: 100%;">
                         <p:row>
                             <p:column style="width: 70%;margin: 0px auto;border: none;">
-                                <h:graphicImage library="images" name="logos.png" style="width: 250px;display: block;margin-left:15px;"/>
+                                <h:graphicImage library="images" name="una.png" style="width: 250px;display: block;margin-left:15px;"/>
                             </p:column>
                             <p:column style="width: 30%;border: none;">
                                 <h2 style="display: block;margin-right: 10px;">Sistema de Gestión
